...
          width: kGreaterButtonWidth + 10,
          height: kNormalButtonHeight,
          child: Tooltip(
            message:
                AppLocalizations.of(context)!.downloadSelPlaylistsButtonTooltip,
            child: TextButton(
              key: const Key('download_sel_playlist_button'),
              style: ButtonStyle(
                shape: getButtonRoundedShape(
                    currentTheme: themeProviderVM.currentTheme,
                    isButtonEnabled: arePlaylistDownloadWidgetsEnabled,
                    context: context),
                padding: WidgetStateProperty.all<EdgeInsetsGeometry>(
...
            // between the button text and its boarder
            width: kSmallIconButtonWidth - 2,
            child: Tooltip(
              message: AppLocalizations.of(context)!
                  .clearPlaylistUrlOrSearchButtonTooltip,
              child: IconButton(
                key: const Key('clearPlaylistUrlOrSearchButtonKey'),
                onPressed: () {
                  _playlistUrlOrSearchController.clear();
                  _containsURL = false;

                  // Disables the search button and call notifyListeners()
                  playlistListVMlistenFalse.disableSearchSentence();
...
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Expanded(
            flex: 6, // controls the height ratio
            child: TextField(
              key: const Key('youtubeUrlOrSearchTextField'),
              controller: _playlistUrlOrSearchController,
              style: const TextStyle(fontSize: 15),
              decoration: InputDecoration(
                labelText: AppLocalizations.of(context)!.ytPlaylistLinkLabel,
                hintText: AppLocalizations.of(context)!.ytPlaylistLinkHintText,
                border: const OutlineInputBorder(),
...
                  maxLines: 1,
                ),
                SizedBox(
                  width: kRowNormalWidthSeparator,
                ),
                Text(
                  key: const Key('selectedPlaylistSFparmNameText'),
                  // using playlistListVM with listen:True guaranties
                  // that the selected playlist title is updated when
                  // the selected playlist changes
                  _selectedPlaylistAudioSortFilterParmsName,
                  style: const TextStyle(
                    fontSize: 12,
...
      // between the button text and its boarder
      width: kNormalButtonWidth - 18,
      height: kNormalButtonHeight,
      child: Tooltip(
        message: AppLocalizations.of(context)!.addPlaylistButtonTooltip,
        child: TextButton(
          key: const Key('addPlaylistButton'),
          style: ButtonStyle(
            shape: getButtonRoundedShape(
                currentTheme: themeProviderVM.currentTheme),
            padding: WidgetStateProperty.all<EdgeInsetsGeometry>(
              const EdgeInsets.symmetric(
                horizontal: kSmallButtonInsidePadding,
...
