import 'dart:io';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';
import 'package:provider/provider.dart';
import 'package:path/path.dart' as path;

import 'package:audiolearn/services/json_data_service.dart';
import 'package:audiolearn/services/settings_data_service.dart';
import 'package:audiolearn/utils/date_time_parser.dart';
import 'package:audiolearn/utils/dir_util.dart';
import 'package:audiolearn/constants.dart';
import 'package:audiolearn/models/audio.dart';
import 'package:audiolearn/models/playlist.dart';
import 'package:audiolearn/viewmodels/audio_download_vm.dart';
import 'package:audiolearn/viewmodels/warning_message_vm.dart';

import 'integration_test_util.dart';

const int secondsDelay = 7; // 7 works, but 10 is safer and 15 solves
//                              the problems of running the integr tests
const String existingAudioDateOnlyFileNamePrefix = '230610';
final String todayDownloadDateOnlyFileNamePrefix =
    Audio.downloadDatePrefixFormatter.format(DateTime.now());
const String globalTestPlaylistId = 'PLzwWSJNcZTMRB9ILve6fEIS_OHGrV5R2o';
const String globalTestPlaylistOneAudioId =
    'PLzwWSJNcZTMRB9ILve6fEIS_OHGrV5R2o';
const String globalTestPlaylistUrl =
    'https://youtube.com/playlist?list=PLzwWSJNcZTMRB9ILve6fEIS_OHGrV5R2o';
const String globalTestPlaylistTitle =
    'audio_learn_test_download_2_small_videos';
const String globalTestPlaylistOneAudioTitle =
    'audio_learn_test_download_2_small_vid_1a';
final String globalTestPlaylistDir =
    '$kApplicationPathWindowsTest${path.separator}playlists${path.separator}$globalTestPlaylistTitle';
final String globalTestPlaylistOneAudioDir =
    '$kApplicationPathWindowsTest${path.separator}playlists${path.separator}$globalTestPlaylistOneAudioTitle';

Future<void> main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  group('Download 1 playlist with short audio', () {
    test('Check initial values', () async {
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      final WarningMessageVM warningMessageVM = WarningMessageVM();

      final SettingsDataService settingsDataService = SettingsDataService(
        isTest: true,
      );

      // load settings from file which does not exist. This
      // will ensure that the default playlist root path is set
      await settingsDataService.loadSettingsFromFile(
          settingsJsonPathFileName: "temp\\wrong.json");

      final AudioDownloadVM audioDownloadVM = AudioDownloadVM(
        warningMessageVM: warningMessageVM,
        settingsDataService: settingsDataService,
      );

      expect(audioDownloadVM.listOfPlaylist, []);

      // this check fails if the secondsDelay value is too small
      expect(audioDownloadVM.isAudioDownloading, false);

      expect(audioDownloadVM.audioDownloadProgress, 0.0);
      expect(audioDownloadVM.lastSecondAudioDownloadSpeed, 0);
      expect(audioDownloadVM.isHighQuality, false);

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });

    testWidgets('Playlist 2 short audio spoken quality: playlist dir not exist',
        (WidgetTester tester) async {
      // necessary in case the previous test failed and so did not
      // delete the its playlist dir
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      // Copying the initial local playlist json file with no audio
      DirUtil.copyFilesFromDirAndSubDirsToDirectory(
        sourceRootPath:
            "$kDownloadAppTestSavedDataDir${path.separator}audio_learn_download_2_small_videos_empty_dir_test",
        destinationRootPath: kApplicationPathWindowsTest,
      );

      AudioDownloadVM audioDownloadVM =
          await IntegrationTestUtil.launchIntegrTestAppEnablingInternetAccess(
        tester: tester,
        forcedLocale: const Locale('en'),
      );

      // Entering the created playlist URL in the Youtube URL or search
      // text field of the app
      await tester.enterText(
        find.byKey(
          const Key('youtubeUrlOrSearchTextField'),
        ),
        globalTestPlaylistUrl,
      );
      await tester.pumpAndSettle();

      // Open the add playlist dialog by tapping the add playlist
      // button
      await tester.tap(find.byKey(const Key('addPlaylistButton')));
      await tester.pumpAndSettle();

      // Check the value of the AlertDialog dialog title
      Text alertDialogTitle =
          tester.widget(find.byKey(const Key('playlistConfirmDialogTitleKey')));
      expect(alertDialogTitle.data, 'Add Youtube Playlist');

      // Check the value of the AlertDialog url Text
      Text confirmUrlText =
          tester.widget(find.byKey(const Key('playlistUrlConfirmDialogText')));
      expect(confirmUrlText.data, globalTestPlaylistUrl);

      // Confirm the addition by tapping the 'Add' button in
      // the AlertDialog and then on the 'OK' button of the
      // confirm dialog
      await tester
          .tap(find.byKey(const Key('addPlaylistConfirmDialogAddButton')));
      await tester.pumpAndSettle();

      // Add a delay to allow the update playlist URL to finish. 1
      // second is ok
      await Future.delayed(const Duration(seconds: 1));
      await tester.pumpAndSettle();

      // Verify the displayed warning dialog
      await IntegrationTestUtil.verifyAndCloseWarningDialog(
        tester: tester,
        warningDialogMessage:
            "Youtube playlist \"$globalTestPlaylistTitle\" of spoken quality added at the end of the playlist list at position 1.",
        isWarningConfirming: true,
      );

      // Now tap on the delete button to empty the search text
      // field. The reason is due to using debounce in the
      // YoutubeUrlOrSearchTextField widget. If the text field is not
      // emptied, it avoids that the Youtube playlist addition warning
      // dialog is shown twice when the 'Add playlist button' button is
      // tapped.
      await tester.tap(
        find.byKey(
          const Key('clearPlaylistUrlOrSearchButtonKey'),
        ),
      );
      await tester.pumpAndSettle();

      expect(
        tester
            .widget<TextField>(find.byKey(
              const Key('youtubeUrlOrSearchTextField'),
            ))
            .controller!
            .text,
        '', // 'Youtube Link or Search' displayed in the TextField
        //     is a hint text and not the actual text !
      );

      // Now selecting the created playlist by tapping on the
      // playlist checkbox
      await IntegrationTestUtil.selectPlaylist(
        tester: tester,
        playlistToSelectTitle: globalTestPlaylistTitle,
      );

      // Now typing on the download playlist button to download the
      // 2 video audios present in the created playlist.
      await tester.tap(find.byKey(const Key('download_sel_playlist_button')));
      await tester.pumpAndSettle();

      // Add a delay to allow the download to finish.
      for (int i = 0; i < 6; i++) {
        await Future.delayed(const Duration(seconds: 2));
        await tester.pumpAndSettle();
      }

      Playlist downloadedPlaylist = audioDownloadVM.listOfPlaylist[0];

      _checkDownloadedPlaylist(
        downloadedPlaylist: downloadedPlaylist,
        playlistId: globalTestPlaylistId,
        playlistTitle: globalTestPlaylistTitle,
        playlistUrl: globalTestPlaylistUrl,
        playlistDir: globalTestPlaylistDir,
        isPlaylistSelected: true,
      );

      // this check fails if the secondsDelay value is too small
      expect(audioDownloadVM.isAudioDownloading, false);

      expect(audioDownloadVM.audioDownloadProgress, 1.0);
      expect(audioDownloadVM.lastSecondAudioDownloadSpeed, 0);
      expect(audioDownloadVM.isHighQuality, false);

      // Checking the data of the audio contained in the downloaded
      // audio list which contains 2 downloaded Audio's
      _checkPlaylistDownloadedAudios(
        downloadedAudioOne: downloadedPlaylist.downloadedAudioLst[0],
        downloadedAudioTwo: downloadedPlaylist.downloadedAudioLst[1],
        audioOneFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        audioTwoFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
      );

      // Checking the data of the audio contained in the playable
      // audio list;
      //
      // playableAudioLst contains Audio's inserted at list start
      _checkPlaylistDownloadedAudios(
        downloadedAudioOne: downloadedPlaylist.playableAudioLst[1],
        downloadedAudioTwo: downloadedPlaylist.playableAudioLst[0],
        audioOneFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        audioTwoFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
      );

      // Checking if there are 3 files in the directory (2 mp3 and 1 json)
      final List<FileSystemEntity> files =
          Directory(globalTestPlaylistDir).listSync(
        recursive: false,
        followLinks: false,
      );

      expect(files.length, 3);

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets('Playlist 2 short audio music quality: playlist dir not exist',
        (WidgetTester tester) async {
      // necessary in case the previous test failed and so did not
      // delete the its playlist dir
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      // Copying the initial local playlist json file with no audio
      DirUtil.copyFilesFromDirAndSubDirsToDirectory(
        sourceRootPath:
            "$kDownloadAppTestSavedDataDir${path.separator}audio_learn_download_2_small_videos_empty_dir_test",
        destinationRootPath: kApplicationPathWindowsTest,
      );

      AudioDownloadVM audioDownloadVM =
          await IntegrationTestUtil.launchIntegrTestAppEnablingInternetAccess(
        tester: tester,
        forcedLocale: const Locale('en'),
      );

      // Entering the created playlist URL in the Youtube URL or search
      // text field of the app
      await tester.enterText(
        find.byKey(
          const Key('youtubeUrlOrSearchTextField'),
        ),
        globalTestPlaylistUrl,
      );
      await tester.pumpAndSettle();

      // Open the add playlist dialog by tapping the add playlist
      // button
      await tester.tap(find.byKey(const Key('addPlaylistButton')));
      await tester.pumpAndSettle();

      // Check the value of the AlertDialog dialog title
      Text alertDialogTitle =
          tester.widget(find.byKey(const Key('playlistConfirmDialogTitleKey')));
      expect(alertDialogTitle.data, 'Add Youtube Playlist');

      // Check the value of the AlertDialog url Text
      Text confirmUrlText =
          tester.widget(find.byKey(const Key('playlistUrlConfirmDialogText')));
      expect(confirmUrlText.data, globalTestPlaylistUrl);

      // Set the music quality checkbox to true
      await tester
          .tap(find.byKey(const Key('playlistQualityConfirmDialogCheckBox')));
      await tester.pumpAndSettle();

      // Confirm the addition by tapping the 'Add' button in
      // the AlertDialog and then on the 'OK' button of the
      // confirm dialog
      await tester
          .tap(find.byKey(const Key('addPlaylistConfirmDialogAddButton')));
      await tester.pumpAndSettle();

      // Add a delay to allow the update playlist URL to finish. 1
      // second is ok
      await Future.delayed(const Duration(seconds: 1));
      await tester.pumpAndSettle();

      // Verify the displayed warning dialog
      await IntegrationTestUtil.verifyAndCloseWarningDialog(
        tester: tester,
        warningDialogMessage:
            "Youtube playlist \"$globalTestPlaylistTitle\" of musical quality added at the end of the playlist list at position 1.",
        isWarningConfirming: true,
      );

      // Now tap on the delete button to empty the search text
      // field. The reason is due to using debounce in the
      // YoutubeUrlOrSearchTextField widget. If the text field is not
      // emptied, it avoids that the Youtube playlist addition warning
      // dialog is shown twice when the 'Add playlist button' button is
      // tapped.
      await tester.tap(
        find.byKey(
          const Key('clearPlaylistUrlOrSearchButtonKey'),
        ),
      );

      expect(
        tester
            .widget<TextField>(find.byKey(
              const Key('youtubeUrlOrSearchTextField'),
            ))
            .controller!
            .text,
        '', // 'Youtube Link or Search' displayed in the TextField
        //     is a hint text and not the actual text !
      );

      // Now selecting the created playlist by tapping on the
      // playlist checkbox
      await IntegrationTestUtil.selectPlaylist(
        tester: tester,
        playlistToSelectTitle: globalTestPlaylistTitle,
      );

      // Now typing on the download playlist button to download the
      // 2 video audios present the created playlist.
      await tester.tap(find.byKey(const Key('download_sel_playlist_button')));
      await tester.pumpAndSettle();

      // Add a delay to allow the download to finish.
      for (int i = 0; i < 7; i++) {
        await Future.delayed(const Duration(seconds: 2));
        await tester.pumpAndSettle();
      }

      Playlist downloadedPlaylist = audioDownloadVM.listOfPlaylist[0];

      _checkDownloadedPlaylist(
        downloadedPlaylist: downloadedPlaylist,
        playlistId: globalTestPlaylistId,
        playlistTitle: globalTestPlaylistTitle,
        playlistUrl: globalTestPlaylistUrl,
        playlistDir: globalTestPlaylistDir,
        isPlaylistSelected: true,
        isPlaylistAtVoiceQuality: false,
      );

      // this check fails if the secondsDelay value is too small
      expect(audioDownloadVM.isAudioDownloading, false);

      expect(audioDownloadVM.audioDownloadProgress, 1.0);
      expect(audioDownloadVM.lastSecondAudioDownloadSpeed, 0);
      expect(audioDownloadVM.isHighQuality, true);

      // Checking the data of the audio contained in the downloaded
      // audio list which contains 2 downloaded Audio's
      _checkPlaylistDownloadedAudios(
        downloadedAudioOne: downloadedPlaylist.downloadedAudioLst[0],
        downloadedAudioTwo: downloadedPlaylist.downloadedAudioLst[1],
        audioOneFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        audioTwoFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        downloadedAtMusicQuality: true,
      );

      // Checking the data of the audio contained in the playable
      // audio list;
      //
      // playableAudioLst contains Audio's inserted at list start
      _checkPlaylistDownloadedAudios(
        downloadedAudioOne: downloadedPlaylist.playableAudioLst[1],
        downloadedAudioTwo: downloadedPlaylist.playableAudioLst[0],
        audioOneFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        audioTwoFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        downloadedAtMusicQuality: true,
      );

      // Checking if there are 3 files in the directory (2 mp3 and 1 json)
      final List<FileSystemEntity> files =
          Directory(globalTestPlaylistDir).listSync(
        recursive: false,
        followLinks: false,
      );

      expect(files.length, 3);

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''Initial Short -> download. Playlist audio_learn_test_download_2_small_vid_1a
           first audio was already downloaded and was deleted. The test verifies that after
           the download started, the stored in playlist 'Short' SF parameter is replaced by
           the 'default' SF parameter.''', (WidgetTester tester) async {
      // necessary in case the previous test failed and so did not
      // delete the its playlist dir
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      // Copying the initial local playlist json file with no audio
      DirUtil.copyFilesFromDirAndSubDirsToDirectory(
        sourceRootPath:
            "$kDownloadAppTestSavedDataDir${path.separator}audio_learn_download_2_small_videos_test",
        destinationRootPath: kApplicationPathWindowsTest,
      );

      AudioDownloadVM audioDownloadVM =
          await IntegrationTestUtil.launchIntegrTestAppEnablingInternetAccess(
        tester: tester,
        forcedLocale: const Locale('en'),
      );

      Playlist existingPlaylistBeforeNewDownload =
          audioDownloadVM.listOfPlaylist[0];

      // Verifying the data of the copied playlist before downloading
      // the playlist

      _checkDownloadedPlaylist(
        downloadedPlaylist: existingPlaylistBeforeNewDownload,
        playlistId: globalTestPlaylistOneAudioId,
        playlistTitle: globalTestPlaylistOneAudioTitle,
        playlistUrl: globalTestPlaylistUrl,
        playlistDir: globalTestPlaylistOneAudioDir,
        isPlaylistSelected: false,
      );

      List<Audio> downloadedAudioLstBeforeDownload =
          existingPlaylistBeforeNewDownload.downloadedAudioLst;
      List<Audio> playableAudioLstBeforeDownload =
          existingPlaylistBeforeNewDownload.playableAudioLst;

      expect(downloadedAudioLstBeforeDownload.length, 1);
      expect(playableAudioLstBeforeDownload.length, 1);

      // Checking the data of the audio contained in the downloaded
      // audio list
      _checkDownloadedAudioShortVideoTwo(
        downloadedAudioTwo: downloadedAudioLstBeforeDownload[0],
        audioTwoFileNamePrefix: existingAudioDateOnlyFileNamePrefix,
      );

      // Checking the data of the audio contained in the playable
      // audio list
      _checkDownloadedAudioShortVideoTwo(
        downloadedAudioTwo: playableAudioLstBeforeDownload[0],
        audioTwoFileNamePrefix: existingAudioDateOnlyFileNamePrefix,
      );

      // Now selecting the existing playlist by tapping on the
      // playlist checkbox
      await IntegrationTestUtil.selectPlaylist(
        tester: tester,
        playlistToSelectTitle:
            globalTestPlaylistOneAudioTitle, // audio_learn_test_download_2_small_vid_1a
        selectPlaylistPumpAndSettleDuration: Duration(milliseconds: 200),
      );

      // Verify its sort filter parameters displayed after the
      // selected playlist title
      Text selectedSortFilterParmsName = tester
          .widget(find.byKey(const Key('selectedPlaylistSFparmNameText')));

      expect(
        selectedSortFilterParmsName.data,
        'Short',
      );

      // Now typing on the download playlist button to download the
      // new video audios present the recreated playlist.
      await tester.tap(find.byKey(const Key('download_sel_playlist_button')));
      await tester.pumpAndSettle();

      // Add a delay to allow the download to finish.
      for (int i = 0; i < 16; i++) {
        await Future.delayed(const Duration(milliseconds: 500));
        selectedSortFilterParmsName = tester
            .widget(find.byKey(const Key('selectedPlaylistSFparmNameText')));
        if (i == 8) {
          // Check that after some download delay, the sort filter parameters
          // displayed after the selected playlist title is 'default'
          expect(
            selectedSortFilterParmsName.data,
            'default',
          );
        }
        await tester.pumpAndSettle();
      }

      // expect(directory.existsSync(), true);

      // Verifying the data of the playlist after downloading it

      Playlist downloadedPlaylist = audioDownloadVM.listOfPlaylist[0];

      _checkDownloadedPlaylist(
        downloadedPlaylist: existingPlaylistBeforeNewDownload,
        playlistId: globalTestPlaylistOneAudioId,
        playlistTitle: globalTestPlaylistOneAudioTitle,
        playlistUrl: globalTestPlaylistUrl,
        playlistDir: globalTestPlaylistOneAudioDir,
        isPlaylistSelected: true,
      );

      // this check fails if the secondsDelay value is too small
      expect(audioDownloadVM.isAudioDownloading, false);

      expect(audioDownloadVM.audioDownloadProgress, 1.0);
      expect(audioDownloadVM.lastSecondAudioDownloadSpeed, 0);
      expect(audioDownloadVM.isHighQuality, false);

      // downloadedAudioLst contains added Audio's
      _checkPlaylistDownloadedAudios(
        downloadedAudioOne: downloadedPlaylist.downloadedAudioLst[1],
        downloadedAudioTwo: downloadedPlaylist.downloadedAudioLst[0],
        audioOneFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        audioTwoFileNamePrefix: existingAudioDateOnlyFileNamePrefix,
      );

      // playableAudioLst contains Audio's inserted at list start
      _checkPlaylistDownloadedAudios(
        downloadedAudioOne: downloadedPlaylist.playableAudioLst[0],
        downloadedAudioTwo: downloadedPlaylist.playableAudioLst[1],
        audioOneFileNamePrefix: todayDownloadDateOnlyFileNamePrefix,
        audioTwoFileNamePrefix: existingAudioDateOnlyFileNamePrefix,
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''While downl., select other playlist. In the 2 short audio initial playlist
           (audio_learn_test_download_2_small_vid_1a), the second audio was already downloaded
           and is deleted from the playlist as well before starting the playlist download. Then,
           while the playlist is downloading and so its 'Short' SF parameter was replaced by
           the 'default' SF parameter, another playlist (audio_player_view_2_shorts_test)
           is selected. The test verifies that the newly selected playlist 'Chap desc' SF
           parameter which was displayed after selecting the other playlist is maintened and so
           not replaced by the 'default' parameter which only concerns the first downloading
           (audio_learn_test_download_2_small_vid_1a playlist) downloading status.''',
        (WidgetTester tester) async {
      // necessary in case the previous test failed and so did not
      // delete the its playlist dir
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      // Copying the initial local playlist json file with no audio
      DirUtil.copyFilesFromDirAndSubDirsToDirectory(
        sourceRootPath:
            "$kDownloadAppTestSavedDataDir${path.separator}audio_learn_download_2_small_videos_test",
        destinationRootPath: kApplicationPathWindowsTest,
      );

      await IntegrationTestUtil.launchIntegrTestAppEnablingInternetAccess(
        tester: tester,
        forcedLocale: const Locale('en'),
      );

      // Now selecting the existing playlist by tapping on the
      // playlist checkbox
      await IntegrationTestUtil.selectPlaylist(
        tester: tester,
        playlistToSelectTitle:
            globalTestPlaylistOneAudioTitle, // audio_learn_test_download_2_small_vid_1a
        selectPlaylistPumpAndSettleDuration: Duration(milliseconds: 200),
      );

      // Verify its sort filter parameters displayed after the
      // selected playlist title
      Text selectedSortFilterParmsName = tester
          .widget(find.byKey(const Key('selectedPlaylistSFparmNameText')));

      expect(
        selectedSortFilterParmsName.data,
        'Short',
      );

      // Now deleting the already downloaded audio file from the
